Match task assertions to parser whitespace rules
Task parsing validates details with trim(), whereas isBlank() recognizes
additional Unicode whitespace. An assertion using isBlank() can reject
input that the parser accepts, turning a user command into an internal
assertion failure when development checks are enabled.

Use the same trim-based emptiness rule in task assertions as in the
parser. Add a Unicode em-space regression test to keep assertion-enabled
execution consistent with ordinary command validation.